css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');

:root{
    --mainFont: 'Montserrat', sans-serif;
    --primaryColor: #48494D;
    --secondaryColor: #AD997B;
}
body {
    background-color: var(--primaryColor);
    color: var(--secondaryColor);
    font-family: var(--mainFont);
} 
* {
    margin: 0px;
    padding: 0px;
}


/* .navbar {
    background-color: rgb(170, 157, 157);
    color: white;
    background-color: #343a40;
}
.navbar-light .navbar-brand {
    color: white;
}
.navbar span {
    background-color: #fff;
}
.display-4 {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.navigation-links ul {
    text-decoration: none;
}
.navigation-links a{
    text-decoration: none;
    color: white;
    /* border: 2px solid pink; */
} */




/* ************** NAVBAR ************ */
.navbar-toggler-icon {
    /* color: none; */
    /* border: none; */
    /* color: red; */
}

.navbar-toggler {
    background-color: none;
    border: none;
    color: red;
}

.home-button {
    height: 30px;
    width: 60px;
    background-color: var(--secondaryColor);
    border: none; 
    border-radius: 3px;
    color: var(--primaryColor);
    text-transform: uppercase;
}


/* ************** MAIN ************ */
 #container {
    /* border: 2px solid blue; */
    height: 60vh;
    width: auto;
    display: flex;
    justify-content: center;
    /* z-index: -1; */
    
    background-size: cover;
    background-position: center;
    
} 
section h1 {
    /* border: 2px solid red; */
    display: flex;
    justify-content: center;
    text-transform: uppercase;
    position: relative;
    bottom: 43vh;
}

section {
    /* border: 2px solid red; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* flex-direction: row; */

}
#my-logo {
    /* border: 2px solid red; */
    height: 12vh;
    position: relative;
    bottom: 45vh;    
}

/* ************** UPPER MAIN ************ */
div {
    /* border: 2px solid red; */
    height: 50px;
    display: flex;
    justify-content: center;

}
.button {
    background-color: var(--secondaryColor);
    color: var(--primaryColor);
    text-transform: uppercase;
    border: none;
    border-radius: 3px;
    position: relative;
    bottom: 10vh;
    height: 40px;
    padding: 0 10px;
}

/* ************** CARD STYLING ************ */

